fixing layout issues

--- a/style.css
+++ b/style.css
@@ -302,6 +302,7 @@ html,body{
 
 .hero-info .hero-info-name-block h1{
     margin-bottom: 1.5rem;
+    color: red;
 }
 
 .hero-info .hero-info-name-block h4{
@@ -327,7 +328,8 @@ html,body{
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    padding: 2rem 0;
+    /* padding: 2rem 0; */
+    font-size: .8rem;
     /* background-color: red; */
 }
 
